// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Free Response Input matches snapshot 1`] = `
Array [
  <textarea
    aria-label="question response text box"
    className="sc-gsnTZi ssWhn"
    data-test-id="free-response-box"
    defaultValue=""
    onChange={[Function]}
    placeholder="Enter your response..."
    readOnly={true}
  />,
  <div
    className="sc-bczRLJ dAfkAa"
  >
    <div>
      <span>
        0
         words
      </span>
    </div>
  </div>,
]
`;

exports[`Free Response Input renders leftInfoComponent component 1`] = `
Array [
  <textarea
    aria-label="question response text box"
    className="sc-gsnTZi cUWBkT"
    data-test-id="free-response-box"
    defaultValue=""
    onChange={[Function]}
    placeholder="Enter your response..."
    readOnly={false}
  />,
  <div
    className="sc-bczRLJ dXOJIg"
  >
    <div>
      <span
        className="last-submitted"
      >
        Last submitted on July 26 at 4:00 pm
      </span>
    </div>
    <div>
      <span>
        0
         words
      </span>
    </div>
  </div>,
]
`;

exports[`Free Response Input renders word limit error 1`] = `
Array [
  <textarea
    aria-label="question response text box"
    className="sc-gsnTZi eksWbk"
    data-test-id="free-response-box"
    defaultValue="response has more than five words"
    onChange={[Function]}
    placeholder="Enter your response..."
    readOnly={false}
  />,
  <div
    className="sc-bczRLJ dAfkAa"
  >
    <div>
      <span>
        6
         words
      </span>
      <span
        className="word-limit-error-info"
      >
        Maximum 
        5
         words
      </span>
    </div>
  </div>,
]
`;
